--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,76 @@ body {
     text-align: left;
 }
 
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #FBB316;
+  margin-bottom: 0;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: var(--h1-weight);
+    line-height: 1.2;
+  }
+  
+  h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    line-height: 1.3;
+    text-transform : uppercase;
+  }
+  
+  h3 {
+    font-size: var(--h3-size);
+    font-weight: var(--h3-weight);
+    line-height: 1.5;
+  }
+  
+  h4 {
+    font-size: var(--h4-size);
+    font-weight: var(--h4-weight);
+    line-height: 1.3;
+  }
+  
+  h5 {
+    font-size: var(--h5-size);
+    font-weight: var(--h5-weight);
+  }
+  
+  h6 {
+    font-size: var(--h6-size);
+    font-weight: var(--h6-weight);
+  }
+  
+  p {
+    font-size: var(--p-size);
+    font-weight: var(--p-weight);
+    line-height: 1.5;
+    color: var(--primary-p-color);
+    margin-bottom: 0;
+  }
+  
+  a {
+    color: var(--nav-item-color);
+    text-decoration: none;
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  
+  a:hover, a:focus {
+    color: var(--primary-color-2);
+    text-decoration: none;
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  
 
 /* NAVIGATION */
 .navbar-dark {
@@ -52,5 +122,5 @@ h1 {
 }
 
 .heading-title {
-    
+
 }
