--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     line-height: 1.5;
     text-align: left;
 }
+
 .primary-color {
     color: #FBB316 !important;
 }
@@ -21,92 +22,112 @@ h3,
 h4,
 h5,
 h6 {
-  color: #FBB316;
-  margin-bottom: 0;
+    color: #FBB316;
+    margin-bottom: 0;
 }
 
 h1 {
     font-size: 3rem;
     font-weight: var(--h1-weight);
     line-height: 1.2;
-  }
-  
-  h2 {
+}
+
+h2 {
     font-size: 2rem;
     font-weight: 800;
     line-height: 1.3;
-    text-transform : uppercase;
-  }
-  
-  h3 {
+    text-transform: uppercase;
+}
+
+h3 {
     font-size: var(--h3-size);
     font-weight: var(--h3-weight);
     line-height: 1.5;
-  }
-  
-  h4 {
+}
+
+h4 {
     font-size: var(--h4-size);
     font-weight: var(--h4-weight);
     line-height: 1.3;
-  }
-  
-  h5 {
+}
+
+h5 {
     font-size: var(--h5-size);
     font-weight: var(--h5-weight);
-  }
-  
-  h6 {
+}
+
+h6 {
     font-size: var(--h6-size);
     font-weight: var(--h6-weight);
-  }
-  
-  p {
+}
+
+p {
     font-size: var(--p-size);
     font-weight: var(--p-weight);
     line-height: 1.5;
     color: var(--primary-p-color);
     margin-bottom: 0;
-  }
-  
-  a {
+}
+
+a {
     color: var(--nav-item-color);
     text-decoration: none;
     outline: none;
     -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-  }
-  
-  a:hover, a:focus {
+}
+
+a:hover,
+a:focus {
     color: #FBB316;
     text-decoration: none;
     outline: none;
     -webkit-box-shadow: none;
-            box-shadow: none;
-  }
+    box-shadow: none;
+}
 
 .btn-primary {
     background-color: #FBB316 !important;
-    border-color : #FBB316 !important;
+    border-color: #FBB316 !important;
 }
 
 .btn-primary:hover {
     color: #fff;
     background-color: #e8a718 !important;
     border-color: #e8a718 !important;
-  }
+}
 
-.btn-primary:focus, .btn-primary.focus {
+.btn-primary:focus,
+.btn-primary.focus {
     color: #fff;
     background-color: #e8a718 !important;
     border-color: #e8a718 !important;
     box-shadow: none !important;
-  }
+}
 
 .btn-secondary {
-    background-color: #FBB316 !important;
+    color: #FBB316;
+    background-color: #221E1F !important;
+    border-color: #221E1F !important;
+  }
+
+.btn-secondary:hover {
+    color: #FBB316;
+    background-color: #0a0a0a !important;
+    border-color: #0a0a0a !important;
 }
+
+.btn-primary:focus,
+.btn-primary.focus {
+    color: #FBB316;
+    background-color: #0a0a0a !important;
+    border-color: #0a0a0a !important;
+    box-shadow: none !important;
+}
+  
+
 
 
 /* NAVIGATION */
@@ -156,4 +177,3 @@ h1 {
     font-size: 1rem;
     line-height: 1.6;
 }
-  
